# vipune

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: agent-integration.md  architecture.md  cli-reference.md  quickstart.md  remory-to-vipune-migration.md  vipune-query-guide.md
src/: commands.rs  config.rs  embedding.rs  errors.rs  import.rs  lib.rs  main.rs  memory.rs  memory_types.rs  output.rs  project.rs  rrf.rs  sqlite.rs  temporal.rs
src/config/: env_parser.rs  legacy.rs  loader.rs  mod.rs  overrides.rs  paths.rs  tests_utils.rs  validation.rs
src/memory/: crud.rs  mod.rs  search.rs  store.rs  tests.rs
src/sqlite/: embedding.rs  fts.rs  mod.rs  search.rs
tests/: lib_integration.rs
